# LLMs-from-scratch

./: .gitignore  pyproject.toml
ch02/: test.ipynb
ch03/: test.ipynb
main/: 1_attention.ipynb  2-gpt_model.ipynb  3_pretraining.ipynb  4_fine-tuning.ipynb  gpt_generate.py  gpt_train.py  main.ipynb
