[tool.poetry]
name = "llms-from-scratch"
version = "0.1.0"
description = ""
authors = ["Tianyi Deng <tdeng@blizzard.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.0.1"        # all
jupyterlab = "^4.0"     # all
tiktoken = "^0.5.1"     # ch02; ch04; ch05
matplotlib = "^3.7.1"   # ch04; ch05
tensorflow = "^2.15.0"  # ch05
tqdm = "^4.66.1"        # ch05; ch07
numpy = "^1.25"  # dependency of several other libraries like torch and pandas
pandas = "^2.2.1"       # ch06
psutil = "^5.9.5"     # ch07; already installed automatically as dependency of torch
jupyter-contrib-nbextensions = "0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
